	* disabled AgsGuiThread synchronization with AgsTaskThread
	* extended AgsJackServer and AgsJackClient to support AgsJackDevin
	* extended AgsPulseServer, AgsPulseClient and AgsPulsePort to support AgsPulseDevin
	* extended AgsSwitchBufferFlag and AgsClearBuffer to support AgsDevin, AgsJackDevin and AgsPulseDevin
	* refactored AgsNotebook to be generic and move to libags-gui
	* use $(docdir) in Makefile.am

ags (1.1.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* moved GtkStyle allocation to GtkWidget::realize()
	* fixed potential infinite loop during audio port related automation
	* fixed ags.rc
	* increased AGS_THREAD_POOL_DEFAULT_MAX_UNUSED_THREADS

ags (1.1.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing style initializer of some widgets

ags (1.1.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added support for ALSA default device
	* modified functional tests to use default device
	* modified ags_devout.c to apply device identifier fixup
	* minor bug-fixes

ags (1.1.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_synth_generator_compute_extended() to deal with x <= 0.0 using floor()
	* fixed if-statements in ags_synth_generator_compute_extended() not to do array index excess

ags (1.1.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_synth_generator_compute_extended() to deal with x <= 0.0

ags (1.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_cancel_audio_new() to use properties
	* fixed ags_set_samplerate_new() to use properties

ags (1.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV in ags_synth_generator_compute_extended() because NULL pointer dereference
	* fixed SIGSEGV in ags_oscillator.c caused by wrong assigned array index

ags (1.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_synth_generator_compute_extended()